@@ -1,7 +1,10 @@
 2024-04-05 "GOLD RUSH"
- * Implementation changes:
-   * Now uses the fujinet network library.
+ * Build & implementation changes:
+   * Now fetches and uses the fujinet network library.
      https://github.com/FujiNetWIFI/fujinet-lib
+     (h/t Frank Rachel)
+ * Other improvements:
+   * Slightly faster text blitting
 
 2022-05-29 "ARGONAUTS"
  * Implementation changes:
